--- a/app/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,51 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="25.75"
+    android:viewportHeight="35">
+  <group android:scaleX="0.4001468"
+      android:scaleY="0.54388887"
+      android:translateX="7.7231097"
+      android:translateY="7.9819446">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M11.54,15.14m-0,-10a10,10 0,1 1,-0 20a10,10 0,1 1,-0 -20"
+        android:strokeLineJoin="round"
+        android:strokeWidth="3.53398"
+        android:fillColor="#000000"
+        android:fillType="evenOdd"
+        android:fillAlpha="0.356195"
+        android:strokeLineCap="square"/>
+    <path
+        android:pathData="M16.54,1.64l-0,27l-10,0l-0,-27z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="4.0734"
+        android:fillColor="#000000"
+        android:fillType="evenOdd"
+        android:fillAlpha="0.356195"
+        android:strokeLineCap="square"/>
+    <path
+        android:pathData="M21.5,4m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"
+        android:strokeLineJoin="round"
+        android:strokeWidth="0.666667"
+        android:fillColor="#000000"
+        android:fillType="evenOdd"
+        android:fillAlpha="0.356195"
+        android:strokeLineCap="square"/>
+    <path
+        android:pathData="M5.041,-0L20.709,-0A5.041,5.041 0,0 1,25.75 5.041L25.75,29.959A5.041,5.041 0,0 1,20.709 35L5.041,35A5.041,5.041 0,0 1,0 29.959L0,5.041A5.041,5.041 0,0 1,5.041 -0z"
+        android:strokeLineJoin="round"
+        android:strokeWidth="1.11189"
+        android:fillColor="#00e800"
+        android:fillType="evenOdd"
+        android:fillAlpha="0.470468"
+        android:strokeLineCap="square"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m11.015,19.079q0,2.496 -1.313,3.834 -1.3,1.338 -3.823,1.338 -2.201,0 -4.004,-0.926l0.631,-1.685q1.532,0.759 3.373,0.759 1.596,0 2.304,-0.836 0.721,-0.849 0.721,-2.637L8.904,5.751l2.111,0z"
+        android:strokeWidth="0.275"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="m20,13.946q1.815,0.425 2.845,1.647 1.03,1.222 1.03,2.908 0,2.47 -1.802,3.937 -1.789,1.467 -4.312,1.467L12.598,23.903L12.598,5.751l5.033,0q2.626,0 4.107,1.158 1.48,1.145 1.48,3.242 0,1.287 -0.862,2.29 -0.85,1.003 -2.356,1.454zM14.709,12.968l2.472,0q3.875,0 3.875,-2.766 0,-1.261 -0.953,-1.93 -0.953,-0.682 -2.793,-0.682l-2.6,0zM14.709,22.064l2.394,0q2.098,0 3.321,-0.952 1.236,-0.952 1.236,-2.612 0,-1.763 -1.21,-2.727 -1.21,-0.965 -3.501,-0.965l-2.24,0z"
+        android:strokeWidth="0.275"/>
+  </group>
 </vector>
